[package]
name = "rust-actix-api"
version = "0.1.0"
authors = ["Lucas William <lucaswilliameufrasio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
